--- a/index.html
+++ b/index.html
@@ -26,11 +26,11 @@
       <button class="add-button">추가</button>
     </form>
     <ul class="content-ul">
-      <li class="content-li">
+      <!-- <li class="content-li">
         <div class="li-name">콜라</div>
         <div class="li-count">3병</div>
         <div class="li-delete">X</div>
-      </li>
+      </li> -->
     </ul>
     <script src="main.js"></script>
   </body>
